# brainer

./: .gitignore  .gitmodules  CMakeLists.txt  hiragana.txt  japanese.txt  katakana.txt  numbers.tsv
base/: CMakeLists.txt
base/include/base/: FileConfig.h  IConfig.h  IndexAllocator.h  Nullable.h  StreamConfig.h  StringValue.h  StringValueTraits.h  randomizer.hpp  strutil.h
base/src/: FileConfig.cpp  StreamConfig.cpp  randomizer.cpp  strutil.cpp
bot/: CMakeLists.txt
bot/openrc/: brainer_bot
bot/src/: Bot.cpp  Bot.h  CollectingSender.cpp  CollectingSender.h  Command.h  ConferenceMessageProcessor.cpp  ConferenceMessageProcessor.h  ConnectionHandler.cpp  ConnectionHandler.h  LogHandler.cpp  LogHandler.h  MUCHandler.cpp  MUCHandler.h  MessageHandler.cpp  MessageHandler.h  MessageProcessor.cpp  MessageProcessor.h  MessageSessionHandler.cpp  MessageSessionHandler.h  RosterManager.cpp  RosterManager.hpp  SignalManager.cpp  SignalManager.h  StringList.h  StringRender.cpp  StringRender.h  main.cpp  parser.cpp  parser.h  strutil.cpp  strutil.h
core/: CMakeLists.txt
core/include/core/: CoreEndpoint.h  FileDictProvider.h  IDictProvider.h  IIterator.h  IRender.h  ITask.h  ITaskGenerator.h  ITaskLogicWatcher.h  ITaskProvider.h  MessageHandler.h  Stats.h  StatsTaskLogicWatcher.h  String.h  TaskId.h  TaskLogic.h
core/include/core/message/: DescribeMessage.h  ElapsedMessage.h  ResultMessage.h  SkipMessage.h  StartTaskMessage.h  StatsMessage.h  StopTaskMessage.h  TasksMessage.h  ValidateMessage.h
core/src/: CoreEndpoint.cpp  FileDictProvider.cpp  StatsTaskLogicWatcher.cpp  Stopwatch.cpp  Stopwatch.h  TaskLogic.cpp
csv/: CMakeLists.txt
csv/include/csv/: csv.h
csv/test/: CMakeLists.txt  CsvTest.cpp
engine/: CMakeLists.txt
engine/include/engine/: Conductor.h  Endpoint.h  IMessage.h  LoopConductor.h
engine/test/: CMakeLists.txt  main.cpp
fact/: CMakeLists.txt
fact/include/fact/: Expression.h  FileFact.h  IFact.h  Item.h  ItemId.h  Logic.h  LogicFunc.h  LogicType.h  Property.h  PropertyId.h  String.h  Variant.h
fact/src/: Expression.cpp  FileFact.cpp  Logic.cpp  LogicFunc.cpp
fact/test/: CMakeLists.txt  ExpressionTest.cpp  LogicFuncTest.cpp  test.cpp
gui/: CMakeLists.txt
gui/src/: Application.cpp  Application.h  GuiConductor.cpp  GuiConductor.h  GuiEndpoint.cpp  GuiEndpoint.h  MenuDialog.cpp  MenuDialog.h  TaskDialog.cpp  TaskDialog.h  main.cpp
gui/ui/: MenuDialog.ui  TaskDialog.ui
mastermind/: CMakeLists.txt
mastermind/include/mastermind/: bot.hpp  config.hpp  game.hpp  session.hpp  type.hpp
mastermind/src/: bot.cpp  game.cpp  session.cpp  util.cpp  util.hpp
task/: CMakeLists.txt
task/include/task/: ArithmeticTask.h  ArithmeticTaskGenerator.h  BaseTask.h  DictTask.h  DictTaskGenerator.h  FactDescriptionTask.h  FactDescriptionTaskGenerator.h  FactTask.h  FactTaskGenerator.h  HexByteTask.h  HexByteTaskGenerator.h  IndexGenerator.h  MastermindTask.h  MastermindTaskGenerator.h  MultiLetterTask.h  MultiLetterTaskGenerator.h  MultiplicationTask.h  MultiplicationTaskGenerator.h  StatsTaskLogicWatcher.h  StringCollection.h  StringSet.h  TaskProvider.h  WordGen.h  WordGenTaskGenerator.h  tagaini.h
task/include/task/inner/: wiktionary.h
task/src/: ArithmeticTask.cpp  ArithmeticTaskGenerator.cpp  DictTask.cpp  DictTaskGenerator.cpp  FactDescriptionTask.cpp  FactDescriptionTaskGenerator.cpp  FactTask.cpp  FactTaskGenerator.cpp  HexByteTask.cpp  HexByteTaskGenerator.cpp  IndexGenerator.cpp  MastermindTask.cpp  MastermindTaskGenerator.cpp  MultiLetterTask.cpp  MultiLetterTaskGenerator.cpp  MultiplicationTask.cpp  MultiplicationTaskGenerator.cpp  StatsTaskLogicWatcher.cpp  TaskProvider.cpp  WordGen.cpp  WordGenTaskGenerator.cpp  condition.h  tagaini.cpp  util.cpp  util.h  wiktionary.cpp  wiktionary.h  wordgen.cpp  wordgen.h
task/src/inner/: wiktionary.cpp
task/test/: CMakeLists.txt  testwiktionary.cpp
