cmake_minimum_required(VERSION 3.0)

set(BRAINER_BASE_LIB "brainerbase")
set(BRAINER_BASE_LIB ${BRAINER_BASE_LIB} PARENT_SCOPE)

set(BRAINER_BASE_INCLUDES "${CMAKE_CURRENT_SOURCE_DIR}/include")

file(GLOB BRAINER_BASE_SRCS "src/*.cpp")

add_library(${BRAINER_BASE_LIB} ${BRAINER_BASE_SRCS})
target_include_directories(${BRAINER_BASE_LIB} PUBLIC "${BRAINER_BASE_INCLUDES}")
