cmake_minimum_required(VERSION 3.5)

set(BRAINER_MASTERMIND_LIB "brainermastermind")
set(BRAINER_MASTERMIND_LIB ${BRAINER_MASTERMIND_LIB} PARENT_SCOPE)

file(GLOB BRAINER_MASTERMIND_SRCS "src/*.cpp")

add_library(${BRAINER_MASTERMIND_LIB} ${BRAINER_MASTERMIND_SRCS})
target_include_directories(${BRAINER_MASTERMIND_LIB}
    PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
